# games

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: test.yml
client/: Dockerfile  card_tracker.py  main.py  requirements.txt
client/ui/: prompts.py  renderer.py
hooks/: pre-commit  pre-push
shared/: __init__.py  constants.py  models.py
simulations/: betting.py  card_counting.py  counting_simulation.py  shoe_penetration.py
tests/: requirements.txt  test_betting.py  test_card_counting.py  test_card_tracker.py  test_counting_simulation.py  test_deck.py  test_hand_workflow.py  test_models.py  test_session_workflow.py  test_shoe_penetration.py
worker/: Dockerfile  main.py
worker/activities/: deck.py
worker/workflows/: blackjack_hand.py  blackjack_session.py
