[project]
name = "blackjack-casino"
version = "0.1.0"
description = "A Dockerized Blackjack game powered by Temporal.io workflows"
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.7.1,<2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
